# bibdata

./: .autorc  .gitignore  .lando.yml  .rspec  .rubocop.yml  .rubocop_todo.yml  .semgrep.yml  .semgrepignore  .tool-versions  .travis.yml  99227515106421_PO.json  AGENTS.md  CHANGELOG.md  Capfile  Cargo.toml  Gemfile  README.md  Rakefile  additional_campus_access.csv  bearer.ignore  bearer.yml  circle.yml  devbox.json  fixtures1014.json  holding_locations.json  marc.xml  marc_liberation.dump  test.rb  tmp  voyager_alma_mapping.csv
.circleci/: config.yml
.github/: dependabot.yml
figgy_marc/: Cargo.toml
figgy_marc/src/: config.rs  error.rs  lib.rs  mms_records_report.rs  redis_cache.rs  test_helpers.rs  visibility.rs
lib/bibdata_rs/: Cargo.toml  config.toml  extconf.rb  utils.rb
lib/bibdata_rs/.cargo/: config.toml
lib/bibdata_rs/benches/: dataspace_bench.rs  languages_bench.rs  marc_bench.rs
lib/bibdata_rs/src/: config.rs  languages.rs  lib.rs  locations.rs  marc.rs  paths.rs  solr.rs  testing_support.rs
lib/bibdata_rs/src/ephemera/: born_digital_collection.rs  ephemera_folder.rs  ephemera_folder_builder.rs  ephemera_folder_item.rs  ephemera_folder_item_builder.rs  ephemera_folders.rs  ephemera_item.rs  ephemera_item_builder.rs  mod.rs
lib/bibdata_rs/src/ephemera/ephemera_folder/: country.rs  coverage.rs  electronic_access.rs  format.rs  language.rs  origin_place.rs  subject.rs
lib/bibdata_rs/src/ephemera/ephemera_folder_item/: format.rs  language.rs  subject.rs
lib/bibdata_rs/src/languages/: iso_639_2b.rs  iso_639_3.rs  iso_639_5.rs
lib/bibdata_rs/src/locations/: ruby_bindings.rs
lib/bibdata_rs/src/marc/: alma.rs  call_number.rs  cjk.rs  contributors.rs  control_field.rs  date.rs  extract_values.rs  figgy.rs  fixed_field.rs  genre.rs  holdings.rs  identifier.rs  indigenous_studies.rs  language.rs  marcxml_compressor.rs  non_latin.rs  note.rs  publication.rs  punctuation.rs  record_facet_mapping.rs  ruby_bindings.rs  scsb.rs  standard_number.rs  string_normalize.rs  subject.rs  suggest.rs  title.rs  variable_length_field.rs
lib/bibdata_rs/src/marc/control_field/: cataloging_source.rs  control_number.rs  partner_id.rs  system_control_number.rs
lib/bibdata_rs/src/marc/fixed_field/: dates.rs  leader.rs  literary_form.rs  physical_description.rs
lib/bibdata_rs/src/marc/fixed_field/leader/: bibliographic_level.rs  type_of_record.rs
lib/bibdata_rs/src/marc/genre/: biographical_content.rs
lib/bibdata_rs/src/marc/holdings/: holding_location.rs  library.rs  partner.rs
lib/bibdata_rs/src/marc/identifier/: isbn.rs  issn.rs  oclc.rs
lib/bibdata_rs/src/marc/note/: action_note.rs
lib/bibdata_rs/src/marc/ruby_bindings/: marc_gem.rs
lib/bibdata_rs/src/marc/scsb/: collection_group.rs  recap_partner.rs
lib/bibdata_rs/src/marc/utils/: slice.rs
lib/bibdata_rs/src/solr/: access_facet.rs  author_roles.rs  builder.rs  dataspace_solr_mapping.rs  electronic_access.rs  ephemera_solr_mapping.rs  expanded_author.rs  format.rs  format_facet.rs  index.rs  library_facet.rs  solr_document.rs
lib/bibdata_rs/src/theses/: collection.rs  communities.rs  config.rs  dataspace.rs  dataspace_api.rs  dataspace_document.rs  dataspace_solr_mapping.rs  department.rs  embargo.rs  holdings.rs  just_testing.rs  language.rs  latex.rs  legacy_dataspace.rs  mod.rs  program.rs  restrictions.rs  solr.rs
lib/bibdata_rs/src/theses/dataspace/: collection.rs  communities.rs  community.rs  document.rs
lib/bibdata_rs/src/theses/dataspace/document/: builder.rs  normalize.rs
lib/bibdata_rs/src/theses/legacy_dataspace/: collection.rs  community.rs
lib/bibdata_rs/src/theses/legacy_dataspace/document/: builder.rs  normalize.rs
lib/bibdata_rs/src/theses/solr/: builder.rs  dataspace_solr_mapping.rs
lib/bibdata_rs/theses/: dataspace_document.rb  fetcher.rb  harvester.rb  indexer.rb
(+1360 files in other folders)
