[package]
name = "figgy_marc"
edition = "2024"
version = "0.1.0"

[[bin]]
name = "cache_figgy_data"

[lib]

[dependencies]
r2d2 = "0.8.10"
redis = {version = "1.2.0", features = ["r2d2"]}
reqwest = {version = "0.13.3", features = ["blocking", "json"] }
serde = {version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
mockito = "1.7.2"
