[package]
name = "bibdata_rs"
edition = "2024"
publish = false
version = "0.1.0"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
base64 = "0.22.1"
figgy_marc = { path = "../../figgy_marc" }
flate2 = "1.1.9"
magnus = { version = "0.8.0" }
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.0"
serde_json = { version = "1.0.143", features = ["indexmap", "preserve_order"] }
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
itertools = "0.14.0"
codes-iso-639 = "0.1.5"
parse_datetime = "0.14.0"
env_logger = "0.11.10"
log = "0.4.27"
rayon = "1.10.0"
anyhow = "1.0.98"
rb-sys = "0.9.126"
marctk = {git = "https://github.com/kcls/marctk", features = ["marc21_bibliographic"] }
library_stdnums = "0.1.0"
indexmap = "2"
unicode-blocks = "0.1.9"
jiff = "0.2.23"

[dev-dependencies]
criterion = "0.8.2"
mockito = "1.7.0"
rb-sys-test-helpers = "0.3.0"
pretty_assertions = "1.4.1"

[[bench]]
name = "dataspace_bench"
harness = false

[[bench]]
name = "languages_bench"
harness = false

[[bench]]
name = "marc_bench"
harness = false
